won't work= not enough stars

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ body {
   width: 30px;
   background: url("../images/star.svg") no-repeat center center / contain transparent;
   animation: starbright 3s infinite alternate;
-  transform-origin: bottom;
+  transform-origin: center;
 }
 
 @keyframes starbright {
@@ -59,7 +59,7 @@ body {
   }
 
   100% {
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
   }
 }
